# CppTools

./: README.md
includes/x/: TestSuite.h  string.h
string/: CMakeLists.txt
string/src/: string.cpp
string/src/tests/: string_test.cpp
testSuite/: CMakeLists.txt
testSuite/src/tests/: test_example.cpp
